# mars_weather_api

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
src/imppkg/: mars_weater_api.py
src/mars_weather_api/: __init__.py  mars_weather_api.py
src/mars_weather_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
