[metadata]
name = mars_weather_api
version = 0.1.9
url = https://github.com/sgravesOTC/mars_weather_api.git
author = Shanna Graves
author_email = "Shanna Graves" <sgravescreations@gmail.com>
description = This is a wrapper for the NASA InSight API.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers = 
    License :: OSI Approved :: MIT License

[options]
package_dir = 
    =src
packages = find:
python_requires = >=3.8
install_requires = requests>=2.25.0

[options.packages.find]
where = src
exclude = 
    test*

